perf for Besu loibs 2
Signed-off-by: Alex Kuzmin <alex.kuzmin@swirldslabs.com>